# internal/model/pet.go
@@ -1,8 +1,11 @@
 package model
 
-type FindPetParams struct {
-	// Status values that need to be considered for filter
-	Status []PetStatus `form:"status"`
+type Pet struct {
+	Id       int64     `json:"id"`
+	Category Category  `json:"category"`
+	Name     string    `json:"name"`
+	Tags     []Tag     `json:"tags"`
+	Status   PetStatus `json:"status"`
 }
 
 type PetStatus string
@@ -13,10 +16,12 @@ const (
 	SoldPet      PetStatus = "sold"
 )
 
-type Pet struct {
-	Id       int64     `json:"id"`
-	Category Category  `json:"category"`
-	Name     string    `json:"name"`
-	Tags     []Tag     `json:"tags"`
-	Status   PetStatus `json:"status"`
+type FindPetByStatusParams struct {
+	// Status values that need to be considered for filter
+	Status []PetStatus `form:"status"`
+}
+
+type GetPetById struct {
+	// Id ID
+	Id int64 `uri:"id"`
 }
