# openapi/petstore_simp.yaml
@@ -35,12 +35,9 @@ tags:
 paths:
   /pet/findByStatus:
     get:
-      $gopath: internal/delivery/http/handler.PetHandler.FindPet
+      x-$path: internal/delivery/http/handler.PetHandler.FindPet
       tags:
         - pet
-      parameters:
-        - name: status
-          required: true
       responses:
         200:
           description: successful operation
@@ -50,21 +47,16 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Pet'
-        400:
+
+        401:
           description: Invalid status value
           content:
             application/json:
               schema:
                 type: object
                 properties:
-                  code:
-                    type: integer
-                    format: int64
                   msg:
                     type: string
-              example:
-                code: 401
-                msg: 没有权限
 
       security:
         - petstore_auth:
@@ -213,42 +205,11 @@ components:
       xml:
         name: Tag
     Pet:
+      x-$schemas: internal/model.Pet
       required:
         - name
         - photoUrls
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-        category:
-          $ref: '#/components/schemas/Category'
-        name:
-          type: string
-          example: doggie
-        photoUrls:
-          type: array
-          xml:
-            name: photoUrl
-            wrapped: true
-          items:
-            type: string
-        tags:
-          type: array
-          xml:
-            name: tag
-            wrapped: true
-          items:
-            $ref: '#/components/schemas/Tag'
-        status:
-          type: string
-          description: pet status in the store
-          enum:
-            - available
-            - pending
-            - sold
-      xml:
-        name: Pet
+
   securitySchemes:
     petstore_auth:
       type: oauth2
